<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/text_view_profile_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:padding="16dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/text_view_profile_img_container"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="2dp"
                android:layout_gravity="center"
                app:cardCornerRadius="250dp">

                <ImageView
                    android:id="@+id/text_view_profile_img"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/dscsrec" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/text_view_profile_img_container"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_view_profile_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_name" />

                <TextView
                    android:id="@+id/text_view_profile_dec"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_dec" />

                <TextView
                    android:id="@+id/text_view_post_timestamp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/post_timestamp" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/text_view_post_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/text_view_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:padding="16dp"
                android:text="@string/post_content" />

            <VideoView
                android:id="@+id/video_view_post_image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_below="@+id/text_view_post"
                android:layout_marginTop="8dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/text_view_social_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/white"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/social_like"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_round_like" />

                <ImageView
                    android:id="@+id/social_insightful"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginStart="2dp"
                    android:layout_toEndOf="@+id/social_like"
                    android:src="@drawable/ic_round_insightful" />

                <ImageView
                    android:id="@+id/social_love"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginStart="2dp"
                    android:layout_toEndOf="@+id/social_insightful"
                    android:src="@drawable/ic_round_love" />

                <TextView
                    android:id="@+id/text_view_social_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="6dp"
                    android:layout_toEndOf="@+id/social_love"
                    android:text="@string/social_count"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/text_view_comment_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/comment_count"
                    android:textSize="12sp" />

            </RelativeLayout>

            <View
                android:id="@+id/separator_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/text_view_social_container"
                android:layout_marginTop="4dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="#c0c0c0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/separator_line"
                android:layout_gravity="center"
                android:weightSum="4"
                android:background="@color/white"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/like_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:background="@color/white"
                    android:foreground="?attr/selectableItemBackground"
                    tools:targetApi="m"
                    tools:ignore="UnusedAttribute">

                    <ImageView
                        android:id="@+id/post_like"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="4dp"
                        android:src="@drawable/ic_outline_like" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/like_text"
                        android:layout_gravity="center"
                        android:textColor="#2C2C2C"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/comment_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:background="@color/white"
                    android:foreground="?attr/selectableItemBackground"
                    tools:targetApi="m"
                    tools:ignore="UnusedAttribute"
                    android:clickable="true"
                    android:focusable="true">

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="4dp"
                        android:src="@drawable/ic_outline_comment" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/comment_text"
                        android:layout_gravity="center"
                        android:textColor="#2C2C2C"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:background="@color/white"
                    android:foreground="?attr/selectableItemBackground"
                    tools:targetApi="m"
                    tools:ignore="UnusedAttribute"
                    android:clickable="true"
                    android:focusable="true">

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="4dp"
                        android:src="@drawable/ic_outline_share" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/share_text"
                        android:layout_gravity="center"
                        android:textColor="#2C2C2C"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:background="@color/white"
                    android:foreground="?attr/selectableItemBackground"
                    tools:targetApi="m"
                    tools:ignore="UnusedAttribute"
                    android:clickable="true"
                    android:focusable="true">

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="4dp"
                        android:src="@drawable/ic_outline_send" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/send_text"
                        android:layout_gravity="center"
                        android:textColor="#2C2C2C"/>
                </LinearLayout>


            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>